refactor map view drawing

--- a/PhoneBookDataEditor/res/layout/activity_edit_seatposition.xml
+++ b/PhoneBookDataEditor/res/layout/activity_edit_seatposition.xml
@@ -50,8 +50,8 @@
            
                     <com.nnit.phonebook.dataeditor.ui.MapView
                         android:id="@+id/edit_seatpos_map"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:scaleType="matrix"
