--- a/PhoneBookDataEditor/res/layout/activity_new_map.xml
+++ b/PhoneBookDataEditor/res/layout/activity_new_map.xml
@@ -41,7 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Map Image:"
+                        android:text="@string/new_map_image"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" 
                         android:layout_gravity="bottom"/>
@@ -70,7 +70,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Filename:"
+                        android:text="@string/new_map_imagefile"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -89,7 +89,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Floor Number:"
+                        android:text="@string/new_map_floor"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" 
                         android:layout_gravity="center" />
