--- a/PhoneBookDataEditor/res/layout/activity_new_phonebook.xml
+++ b/PhoneBookDataEditor/res/layout/activity_new_phonebook.xml
@@ -41,7 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Photo:"
+                        android:text="@string/new_phonebook_photo"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp"
                         android:layout_gravity="bottom" />
@@ -77,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Initials:"
+                        android:text="@string/new_phonebook_initials"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -95,7 +95,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Name:"
+                        android:text="@string/new_phonebook_name"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -113,7 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Local Name:"
+                        android:text="@string/new_phonebook_localname"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -131,7 +131,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Gender:"
+                        android:text="@string/new_phonebook_gender"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -146,13 +146,13 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:checked="true"
-                            android:text="Male" />
+                            android:text="@string/lable_gender_male" />
 
                         <RadioButton
                             android:id="@+id/new_phonebook_gender_female"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Female" />
+                            android:text="@string/lable_gender_female" />
                     </RadioGroup>
                 </TableRow>
 
@@ -164,7 +164,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Phone:"
+                        android:text="@string/new_phonebook_phone"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -183,7 +183,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Title:"
+                        android:text="@string/new_phonebook_title"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -201,7 +201,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Dep.No:"
+                        android:text="@string/new_phonebook_depno"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -219,7 +219,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Dep.Name:"
+                        android:text="@string/new_phonebook_depname"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
@@ -237,7 +237,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:text="Manager:"
+                        android:text="@string/new_phonebook_manager"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
