--- a/PhoneBookDataEditor/res/layout/dialog_about.xml
+++ b/PhoneBookDataEditor/res/layout/dialog_about.xml
@@ -9,7 +9,7 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="20dip"
+        android:textSize="20sp"
         android:text="@string/version"/>
     <TextView 
         android:id ="@+id/textview_about_author"
