--- a/PhoneBookDataEditor/res/layout/titlebar_maplist.xml
+++ b/PhoneBookDataEditor/res/layout/titlebar_maplist.xml
@@ -12,7 +12,7 @@
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:gravity="center_vertical"
-        android:text="@string/maintitle"
+        android:text="@string/title_maplist"
         android:textSize="16dp" />
 
     <LinearLayout
