--- a/PhoneBookDataEditor/res/layout/titlebar_new_map.xml
+++ b/PhoneBookDataEditor/res/layout/titlebar_new_map.xml
@@ -13,7 +13,7 @@
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:gravity="center_vertical"
-        android:text="" 
+        android:text="@string/title_new_map" 
         android:textSize="16dp"/>
      <LinearLayout 
 	    android:layout_width="wrap_content"
